--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "type": "module",
   "name": "notpos_kr",
-  "version": "1.0.9",
+  "version": "1.1.1",
   "description": "korean POS tagger",
   "main": "index.js",
+
   "exports": {
-    ".": {
-      "import": "./src/index.js",
-      "require": "./src/index.cjs"
-    }
+    "types": "./dist/index.d.ts",
+    "import": "./dist/index.js",
+    "require": "./dist/index.cjs"
   },
+  "files": [
+    "dist",
+    "src",
+    "dic"
+  ]
+,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -30,6 +36,7 @@
   "homepage": "https://github.com/NOT2ho/notPOS_kr#readme",
   "devDependencies": {
     "@types/node": "^22.4.2",
+    "tsx": "^4.17.0",
     "typescript": "^5.5.4"
   }
 }
