--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     ] ,
     "declaration": true ,
     "outDir": "dist" ,
-    "strict": true 
-  }
+    "strict": true,
+    "esModuleInterop": true,
+  },
+  "include": ["src/index.ts"]
 }
