--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6" ,
-    "module": "commonjs",
+    "module": "ES2020",
     "lib": [
       "es5",
       "es6",
